--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /node_modules/
 /.DS_Store
+/.pnp
+.pnp.js
 **/.DS_Store
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
